--- a/src/assets/styles/Footer.css
+++ b/src/assets/styles/Footer.css
@@ -9,3 +9,9 @@
     text-align: center;
     visibility: visible;
 }
+
+@media screen and (min-width: 2000px) {
+    .footer {
+        height: 18%;
+    }
+}
